<resources>
    <string name="app_name">f-talk</string>
    <string name="title_welcome">Find your new friends\nright now!</string>
    <string name="action_get_started">Get started</string>
    <string name="msg_have_an_account_already">Or, have an account already?</string>
    <string name="action_log_in">Log in</string>
    <string name="title_log_in">Log in to f-talk</string>
    <string name="msg_forgot_your_password">Forgot your password? </string>
    <string name="action_click_here">Click here!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="msg_or">Join us with your social account</string>
    <string name="title_create_your_account">Create your account</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_email_address">Email address</string>
    <string name="action_next">Next</string>
    <string name="msg_email_invalid">Your email address is invalid!</string>
    <string name="msg_password_invalid">Your password is invalid!</string>
    <string name="msg_login_success">Login Success!</string>
    <string name="msg_login_fail">Login Fail!</string>
    <string name="msg_full_name_invalid">Full name must not be blank!</string>
    <string name="msg_login_cancel">Login Cancel!</string>
    <string name="msg_password_require">You\'ll need a password</string>
    <string name="msg_password_length_require">Make sure it\'s 6 characters or more</string>
    <string name="action_create_account">Create account</string>
    <string name="hint_confirm_your_password">Confirm your password</string>
    <string name="msg_password_not_match">Password not match!</string>
    <string name="msg_create_account_fail">Create account fail, try again later!</string>
    <string name="msg_sign_up_cancel">Sign up cancel!</string>
    <string name="msg_sign_up_error">Sign up failure by an Facebook\'s error!</string>
    <string name="hint_search">Search people and message…</string>
    <string name="title_recent">Recent</string>
    <string name="title_group">Group</string>
    <string name="title_me">Me</string>
    <string name="msg_nothing_to_show">Nothing to show!</string>
    <string name="title_log_out">Log out</string>
    <string name="title_your_photo">Your photo</string>
    <string name="title_setting">Setting</string>
    <string name="title_your_friend">Your\nfriends</string>
    <string name="title_find_friend">Find\nfriends</string>
    <string name="title_friend_request">Friend\nrequest</string>
    <string name="title_edit_info">Edit info</string>
    <string name="hint_type_your_message">Type your message</string>
    <string name="title_select_picture">Select Picture</string>
</resources>
