<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screen.createaccount.CreateAccountActivity">

    <data>

        <variable
            name="viewModel"
            type="com.framgia.f_talk.screen.createaccount.CreateAccountViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="@dimen/dp_84"
            android:layout_height="@dimen/dp_80"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_f_talk_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_32"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/msg_password_require"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_logo" />

        <TextView
            android:id="@+id/title_password_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:text="@string/msg_password_length_require"
            android:textColor="@color/color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_password_length"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_password"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_confirm_your_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/text_create_account"
            android:layout_width="@dimen/dp_168"
            android:layout_height="@dimen/dp_40"
            android:onClickListener="@{()->viewModel.onCreateAccountClick()}"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:background="@drawable/background_text_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/action_create_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_confirm_password" />

    </android.support.constraint.ConstraintLayout>
</layout>
