<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screen.signup.SignUpActivity">

    <data>

        <variable
            name="viewModel"
            type="com.framgia.f_talk.screen.signup.SignUpViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="@dimen/dp_84"
            android:layout_height="@dimen/dp_80"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_f_talk_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_sign_up_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/title_create_your_account"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_sign_up_title">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_full_name"
                android:inputType="textCapWords"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_full_name">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_email_address"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/text_next"
            android:layout_width="@dimen/dp_96"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:background="@drawable/background_text_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/action_next"
            android:onClick="@{()->viewModel.onNextClick()}"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_email" />

        <TextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:text="@string/msg_or"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_next" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_google_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_or" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/button_facebook_log_in"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_16"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_google_sign_in" />
    </android.support.constraint.ConstraintLayout>
</layout>
